fix index page title bug

--- a/layout/index.pug
+++ b/layout/index.pug
@@ -1,7 +1,7 @@
 extends _partial/layout
 
 block title
-  title= `${page.title} | ${config.subtitle}`
+  title= `${config.title} | ${config.subtitle}`
 
 block content
   div.content__index
